# dataspartan

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  init_db.py  main.py  models.py  routes.py  schemas.py  services.py
backend/tests/: test_api.py  test_services.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AuthorDetailView.tsx  AuthorForm.tsx  AuthorSidebar.tsx  BookDetailView.tsx  BookForm.tsx  BookList.tsx
