[project]
name = "book-catalog-backend"
version = "1.0.0"
description = "Book Catalog API - FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "httpx==0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
